--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^17.0.1",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "mongodb": "^6.14.2",
